# seedlib

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  app.hpp  common.hpp  indexer.cpp  indexer.hpp  main.cpp  readme.md  rrr_multimap.hpp  sets_array.hpp
include/: memreport.hpp  seed_types.hpp  seedlib.hpp
include/seedlib/: memreport.hpp  seedlib.hpp
src/: experiments.cpp  index.hpp  main.cpp  seedlib.cpp  sets_array.hpp
